TP2 - 3.3 : Création de la couche de stockage et intégration

--- a/TP1/HMI/MainWindow.xaml
+++ b/TP1/HMI/MainWindow.xaml
@@ -8,5 +8,6 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Image Source="img/notebookfont.png" Grid.Column="0" Panel.ZIndex="1"/>
+        <Button FontSize="30" Content="Courses" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2" Margin="187,53,0,0" Click="OpenCourseScreen_Click"/>
     </Grid>
 </Window>
