--- a/TP1/HMI/CourseScreen.xaml
+++ b/TP1/HMI/CourseScreen.xaml
@@ -24,6 +24,6 @@
 
         <Button Content="Add new course" FontSize="25" Grid.Column="1" Grid.Row="0" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
         <Button Content="Edit course" FontSize="25" Grid.Column="1" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
-        <Button Content="Delete course" FontSize="25" Grid.Column="1" Grid.Row="2" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+        <Button Content="Remove course" FontSize="25" Grid.Column="1" Grid.Row="2" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="RemoveCourse"/>
     </Grid>
 </Window>
