--- a/TP1/HMI/CourseScreen.xaml
+++ b/TP1/HMI/CourseScreen.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HMI"
         mc:Ignorable="d"
-        Title="CourseScreen" Height="450" Width="800">
+        Title="Edit a course" Height="450" Width="800">
     <Grid>
         <!-- Define the column widths -->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="347*"/>
+            <ColumnDefinition Width="400*"/>
         </Grid.ColumnDefinitions>
 
         <!-- Define the row heights -->
@@ -18,12 +19,23 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <ListBox x:Name="listCourses" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Margin="10"/>
+        <!-- Code -->
+        <Label Grid.Column="1" Content="Code:" Margin="294,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" Height="26" FontSize="15"/>
+        <TextBox Grid.Column="2" Margin="5,0,5,0" VerticalAlignment="Center"  Height="18" x:Name="courseCode"/>
 
-        <Button Content="Add new course" FontSize="25" Grid.Column="1" Grid.Row="0" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
-        <Button Content="Edit course" FontSize="25" Grid.Column="1" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
-        <Button Content="Remove course" FontSize="25" Grid.Column="1" Grid.Row="2" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="RemoveCourse"/>
+        <!-- Name -->
+        <Label Grid.Row="1" Grid.Column="1" Content="Name:" Margin="289,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" Height="26" FontSize="15"/>
+        <TextBox Grid.Row="1" Grid.Column="2" Margin="5,0,5,0" VerticalAlignment="Center" Height="18" x:Name="courseName"/>
+
+        <!-- Weight -->
+        <Label Grid.Row="2" Grid.Column="1" Content="Weight:" Margin="281,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" Height="34" FontSize="15"/>
+        <TextBox Grid.Row="2" Grid.Column="2" Margin="5,0,5,0" VerticalAlignment="Center" Height="18" x:Name="courseWeight"/>
+
+        <Button Grid.Row="3" Grid.Column="0" Content="Ok" Margin="30,39,30,39" Height="30" FontSize="20" Grid.ColumnSpan="2" Click="Ok"/>
+        <Button Grid.Row="3" Grid.Column="2" Content="Cancel" Margin="30,39,30,39" Height="30" FontSize="20" Click="CloseWindow"/>
+
     </Grid>
 </Window>
