TP4 - Modification de la couche IHM

--- a/TP1/HMI/MainWindow.xaml
+++ b/TP1/HMI/MainWindow.xaml
@@ -9,5 +9,6 @@
     <Grid>
         <Image Source="img/notebookfont.png" Grid.Column="0" Panel.ZIndex="1"/>
         <Button FontSize="30" Content="Courses" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2" Margin="187,53,0,0" Click="OpenCourseScreen_Click"/>
+        <Button FontSize="30" Content="Edit exams" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2" Margin="187,134,0,0" Click="OpenExamsScreen_Click" RenderTransformOrigin="0.504,2.964"/>
     </Grid>
 </Window>
