TP4 - Calcul de moyenne

--- a/TP1/HMI/ExamsScreen.xaml
+++ b/TP1/HMI/ExamsScreen.xaml
@@ -19,7 +19,7 @@
 
         <ListBox x:Name="listExam" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" />
         <Button Content="Create exam" Grid.Column="0" Grid.Row="1" Margin="120,5,120,5" Click="CreateExam"/>
-        <Button Content="Close" Grid.Column="1" Grid.Row="1" Margin="120,5,120,5" />
+        <Button Content="Close" Grid.Column="1" Grid.Row="1" Margin="120,5,120,5" Click="CloseWindow" />
     </Grid>
 
 </Window>
