--- a/TP1/HMI/MainWindow.xaml
+++ b/TP1/HMI/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Image Source="img/notebookfont.png" Grid.Column="0" Panel.ZIndex="1"/>
-        <Button FontSize="30" Content="Courses" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2" Margin="187,53,0,0" Click="OpenCourseScreen_Click"/>
-        <Button FontSize="30" Content="Edit exams" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2" Margin="187,134,0,0" Click="OpenExamsScreen_Click" RenderTransformOrigin="0.504,2.964"/>
+        <Button FontSize="30" Content="Courses" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2" Margin="165,53,0,0" Click="OpenCourseScreen_Click" Width="181"/>
+        <Button FontSize="30" Content="Edit exams" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2" Margin="165,160,0,0" Click="OpenExamsScreen_Click" RenderTransformOrigin="0.504,2.964" Width="181"/>
+        <Button FontSize="30" Content="Average" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2" Margin="165,269,0,0" Click="ComputeAverage_Click" RenderTransformOrigin="0.504,2.964" Width="181"/>
     </Grid>
 </Window>
